[gd_scene load_steps=39 format=2]

[ext_resource path="res://Paddle/Paddle.gd" type="Script" id=1]
[ext_resource path="res://Ball/Ball_Container.gd" type="Script" id=2]
[ext_resource path="res://Brick/Bricks.gd" type="Script" id=3]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Walls/Walls.gd" type="Script" id=5]
[ext_resource path="res://Background/Background.gd" type="Script" id=6]
[ext_resource path="res://Assets/confetti.png" type="Texture" id=7]
[ext_resource path="res://Assets/bubble.png" type="Texture" id=8]
[ext_resource path="res://Camera/Camera.gd" type="Script" id=9]
[ext_resource path="res://Ball/Trail_Container.gd" type="Script" id=10]
[ext_resource path="res://Camera/WorldEnvironment.gd" type="Script" id=11]
[ext_resource path="res://Paddle/Face.gd" type="Script" id=12]
[ext_resource path="res://Assets/mouth.png" type="Texture" id=13]
[ext_resource path="res://Assets/pupil.png" type="Texture" id=14]
[ext_resource path="res://Assets/eye.png" type="Texture" id=15]
[ext_resource path="res://Assets/Datalegreya-Thin.otf" type="DynamicFontData" id=16]
[ext_resource path="res://Audio/Music.gd" type="Script" id=17]
[ext_resource path="res://Assets/brick.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/paddle.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/music.ogg" type="AudioStream" id=20]
[ext_resource path="res://Assets/wall.wav" type="AudioStream" id=21]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
min_value = -1.0
_data = [ Vector2( 0.0314465, -1 ), 0.0, 0.0, 0, 0, Vector2( 0.493711, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 75.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 300.0
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
scale = 0.25
scale_random = 0.5
scale_curve = SubResource( 6 )
color_ramp = SubResource( 2 )
hue_variation = 0.1
hue_variation_random = 0.5
hue_variation_curve = SubResource( 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 50, 10 )

[sub_resource type="Curve" id=9]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.451429, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.497436, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 450.0
initial_velocity_random = 0.75
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 0.5
angle_curve = SubResource( 10 )
scale = 0.5
scale_random = 0.5
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )
hue_variation = 0.7
hue_variation_random = 0.25

[sub_resource type="DynamicFont" id=16]
size = 36
font_data = ExtResource( 16 )

[sub_resource type="Environment" id=17]
dof_blur_far_distance = 1.3
dof_blur_near_enabled = true
dof_blur_near_distance = 1.3
glow_enabled = true
glow_bloom = 0.15
glow_blend_mode = 0
glow_hdr_threshold = 0.0
glow_bicubic_upscale = true

[node name="Game" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
margin_left = -200.0
margin_top = -200.0
margin_right = 1275.0
margin_bottom = 968.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Background"]
wait_time = 5.0
autostart = true

[node name="Tween" type="Tween" parent="Background"]

[node name="Walls" type="StaticBody2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 0, 0, 0, 768, 1024, 768, 1024, 0, 64, 0, 64, -64, 1088, -64, 1088, 832, -64, 832, -64, -64, 64, -64, 64, 0 )

[node name="Particles2D" type="Particles2D" parent="Walls"]
emitting = false
lifetime = 0.4
one_shot = true
process_material = SubResource( 7 )
texture = ExtResource( 8 )

[node name="Bricks" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Paddle_Container" type="Node2D" parent="."]

[node name="Paddle" type="KinematicBody2D" parent="Paddle_Container"]
position = Vector2( 512, 700 )
script = ExtResource( 1 )

[node name="Color" type="ColorRect" parent="Paddle_Container/Paddle"]
margin_left = -50.0
margin_right = 50.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle_Container/Paddle"]
position = Vector2( 0, 10 )
shape = SubResource( 8 )

[node name="Tween" type="Tween" parent="Paddle_Container/Paddle"]

[node name="Face" type="Node2D" parent="Paddle_Container/Paddle"]
script = ExtResource( 12 )

[node name="Eye_left" type="Sprite" parent="Paddle_Container/Paddle/Face"]
position = Vector2( -35, -10 )
texture = ExtResource( 15 )

[node name="Eye_right" type="Sprite" parent="Paddle_Container/Paddle/Face"]
position = Vector2( 35, -10 )
texture = ExtResource( 15 )

[node name="Pupil_left" type="Node2D" parent="Paddle_Container/Paddle/Face"]
position = Vector2( -35, -10 )

[node name="Sprite" type="Sprite" parent="Paddle_Container/Paddle/Face/Pupil_left"]
position = Vector2( 10, 0 )
texture = ExtResource( 14 )

[node name="Pupil_right" type="Node2D" parent="Paddle_Container/Paddle/Face"]
position = Vector2( 35, -10 )

[node name="Sprite" type="Sprite" parent="Paddle_Container/Paddle/Face/Pupil_right"]
position = Vector2( 10, 0 )
texture = ExtResource( 14 )

[node name="Mouth" type="Sprite" parent="Paddle_Container/Paddle/Face"]
position = Vector2( 0, 20 )
texture = ExtResource( 13 )

[node name="Particles2D" type="Particles2D" parent="Paddle_Container/Paddle"]
emitting = false
amount = 6
lifetime = 0.4
one_shot = true
process_material = SubResource( 15 )
texture = ExtResource( 7 )

[node name="Trail_Container" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Ball_Container" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 512, 384 )
current = true
script = ExtResource( 9 )

[node name="Starting" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="Starting"]

[node name="Countdown" type="Label" parent="Starting"]
margin_right = 1024.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 16 )
text = "Starting in: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 17 )
script = ExtResource( 11 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
script = ExtResource( 17 )

[node name="Effect_Paddle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="Effect_Wall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="Effect_Brick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="HUD" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="timeout" from="Background/Timer" to="Background" method="_on_Timer_timeout"]
[connection signal="timeout" from="Starting/Timer" to="Ball_Container" method="_on_Timer_timeout"]
[connection signal="finished" from="Music" to="Music" method="_on_Music_finished"]
